--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,9 @@ AllCops:
 Style/FrozenStringLiteralComment:
     Enabled: false
 
+Metrics/MethodLength:
+    Max: 20
+
 Layout/IndentationWidth:
     Width: 4
 
